# infinity-bot-v2-simplize

./: .gitignore  .pdm-python  README.md  bot.py  pyproject.toml  test.py
infinity/: __init__.py  cache_manager.py  chunithm_previewer_v1.py  infinity_api_v1.py  infinity_config.py  mongodb_connect.py  notice.py  rules.py  status_monitor.py  userdata_client_v1.py  userdata_client_v2.py  utils.py  whitelist.py
infinity/chunithm_lib_v1/: MusicPic.py  chart.py  chunithm_best_30.py  chunithm_music.py  chunithm_score_list.py  class_utils.py  divingFishApi.py  image.py  request_client.py  utils.py
infinity/image_v2/: __init__.py  chuni_song_card_template.py  maimai_song_card_template.py  utils.py
infinity/maimai_lib_v1/: MusicPic.py  completion_utils.py  image.py  mai_best_50.py  mai_lv_score.py  mai_plate_completion.py  mai_score.py  music.py  request_client.py  score_line.py  tool.py
infinity/model/: __init__.py  arcade.py  chunithm_song.py  maimai_song.py  maimai_user_record.py  maimai_version.py  uni_message.py
plugins/infinity_plugin_chooser/: __init__.py
plugins/infinity_plugin_chuni/: __init__.py
plugins/infinity_plugin_hello/: __init__.py
plugins/infinity_plugin_help/: __init__.py
plugins/infinity_plugin_mai/: __init__.py
plugins/infinity_plugin_manager/: __init__.py
plugins/infinity_plugin_ping/: __init__.py
plugins/infinity_plugin_today_v1/: __init__.py  config.py  data.py  utils.py
plugins/infinity_plugin_today_v1/music/: chu.py  mai.py
